[project]
name = "rl-lunar-lander"
version = "0.1.0"
description = "DQN model to play lunar lander"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[classic-control,other]>=1.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "pydantic>=2.11.7",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
